--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+# Imported
+Assets/Rewired
+!Assets/Rewired/.gitkeep
+
+Assets/HeroicTraversal
+!Assets/HeroicTravers/.gitkeep
