Imported Gaia 2 by Procedural Worlds. Created a basic animator controller for idle, walking, and jogging.

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,6 @@ Assets/Rewired
 
 Assets/HeroicTraversal
 !Assets/HeroicTravers/.gitkeep
+
+Assets/Procedural Worlds
+!Assets/Procedural Worlds/.gitkeep
