Imported AllIn1SpriteShader asset by Seaside Studios. Imported Heroic Asset Series Overworld by Aleksandr Makarov. Added the animated water sprite with a shader as a plane that follows the character. Changed the way the ground raycast for the character works so that it now relies on the Ground layer.

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,9 @@ Assets/HeroicTraversal
 
 Assets/Procedural Worlds
 !Assets/Procedural Worlds/.gitkeep
+
+Assets/AllIn1SpriteShader
+!Assets/AllIn1SpriteShader/.gitkeep
+
+Assets/Imported/Heroic Asset Series Overworld
+!Assets/Imported/Heroic Asset Series Overworld/Source.txt
