Updated UnityHelpers. Imported PolygonPirates by Synty Studios. Set up three ships with buoyancy.

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ Assets/AllIn1SpriteShader
 
 Assets/Imported/Heroic Asset Series Overworld
 !Assets/Imported/Heroic Asset Series Overworld/Source.txt
+
+Assets/PolygonPirates
+!Assets/PolygonPirates/.gitkeep
