--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,9 @@ sysinfo.txt
 crashlytics-build.properties
 
 # Imported
+Assets/Ludiq
+Assets/Ludiq.Generated
+
 Assets/Rewired
 !Assets/Rewired/.gitkeep
 
@@ -76,3 +79,10 @@ Assets/Imported/Heroic Asset Series Overworld
 
 Assets/PolygonPirates
 !Assets/PolygonPirates/.gitkeep
+
+Assets/3D Items - Mega Pack
+!Assets/3D Items - Mega Pack/.gitkeep
+
+Assets/ExplosiveLLC/RPG Character Mecanim Animation Pack
+!Assets/ExplosiveLLC/RPG Character Mecanim Animation Pack/.gitkeep
+
