Changed the follow camera to be instantiated by the player it is following. Fixed some animations for shield blocking and added the animations for single handed shield attack. Imported a Stylizer, Polygon Dungeon, Mesh Effects, and a post effect shaders asset from the store.

--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,14 @@ Assets/3D Items - Mega Pack
 Assets/ExplosiveLLC/RPG Character Mecanim Animation Pack
 !Assets/ExplosiveLLC/RPG Character Mecanim Animation Pack/.gitkeep
 
+Assets/AkilliMum
+!Assets/AkilliMum/.gitkeep
+
+Assets/KriptoFX/MeshEffect
+!Assets/KriptoFX/MeshEffect/.gitkeep
+
+Assets/PolygonDungeon
+!Assets/PolygonDungeon/.gitkeep
+
+Assets/Stylizer
+!Assets/Stylizer/.gitkeep
